Prueba técnica: se agrega las funciones para el reporte
